# learn_android

./: .gitattributes  .gitignore  README.md
AIDemo/: build.gradle  key-keystore.jks  settings.gradle
AIDemo/app/: build.gradle
AIDemo/app/release/: output.json
AIDemo/app/src/androidTest/java/com/example/aidemo/: ExampleInstrumentedTest.java
AIDemo/app/src/main/: AndroidManifest.xml
AIDemo/app/src/main/cpp/: CMakeLists.txt  FaceLandmark.cpp  FaceLandmark.h  NanoDet.cpp  NanoDet.h  SimplePose.cpp  SimplePose.h  jni_interface.cpp
AIDemo/app/src/main/cpp/ocr/include/: AngleNet.h  CrnnNet.h  DbNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h
AIDemo/app/src/main/cpp/ocr/src/: AngleNet.cpp  CrnnNet.cpp  DbNet.cpp  OcrResultUtils.cpp
AIDemo/app/src/main/java/com/example/aidemo/: ClassificationFragment.java  MainActivity.java  ObjectDetectionFragment.java  OcrFragment.java  StyleTransferFragment.java  SuperResolutionFragment.java  SurfaceActivity.java  TitleFragment.java  Utils.java
AIDemo/app/src/main/java/com/example/aidemo/TFLite/: SplitBitmap.java  TFLiteClassificationUtil.java  TFLiteSRUtil.java  TFLiteStyleTransferUtil.java
AIDemo/app/src/main/java/com/example/aidemo/mnn/: BoxInfo.java  NanoDet.java
AIDemo/app/src/main/java/com/example/aidemo/ncnn/: FaceKeyPoint.java  FaceLandmark.java  KeyPoint.java  SimplePose.java
AIDemo/app/src/main/java/com/example/aidemo/ocr/: BaseDialog.java  DebugDialog.java  DebugItemView.java  OcrEngine.java  OcrResult.java  TextBlock.java  TextDialog.java
AIDemo/app/src/main/res/drawable/: textview_border.xml
AIDemo/app/src/main/res/layout/: activity_main.xml  activity_surface.xml  fragment_classification.xml  fragment_debug_dialog.xml  fragment_object_detection.xml  fragment_ocr.xml  fragment_style_transfer.xml  fragment_super_resolution.xml  fragment_title.xml  rv_debug_item_content.xml  rv_debug_view_item.xml
AIDemo/app/src/main/res/navigation/: graph_nav.xml
AIDemo/app/src/main/res/values/: classification.xml  strings.xml  styles.xml
AIDemo/app/src/test/java/com/example/aidemo/: ExampleUnitTest.java
AIDemo/gradle/wrapper/: gradle-wrapper.properties
Score/: settings.gradle
Score/app/: build.gradle
Score/app/src/androidTest/java/com/example/score/: ExampleInstrumentedTest.java
Score/app/src/main/java/com/example/score/: MainActivity.java  MyViewModel.java
Score/app/src/main/res/layout/: activity_main.xml
Score/app/src/main/res/values/: dimens.xml  strings.xml
Score/gradle/wrapper/: gradle-wrapper.properties
math_game/: settings.gradle
math_game/app/: build.gradle
math_game/app/src/androidTest/java/com/example/math_game/: ExampleInstrumentedTest.java
math_game/app/src/main/: AndroidManifest.xml
math_game/app/src/main/java/com/example/math_game/: LoseFragment.java  MainActivity.java  MyViewModel.java  QuestionFragment.java  TitleFragment.java  WinFragment.java
math_game/app/src/main/res/drawable/: ic_baseline_sentiment_very_dissatisfied_24.xml  ic_baseline_sentiment_very_satisfied_24.xml
math_game/app/src/main/res/layout/: activity_main.xml  fragment_lose.xml  fragment_question.xml  fragment_title.xml  fragment_win.xml
math_game/app/src/main/res/navigation/: nav_math.xml
math_game/app/src/main/res/values/: dimens.xml  strings.xml
math_game/app/src/test/java/com/example/math_game/: ExampleUnitTest.java
math_game/gradle/wrapper/: gradle-wrapper.properties
